--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="utg-8">
     <title>Belly Button Biodiversity</title>
-    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/belly-button-biodiversity/assets/reset.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
             crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/belly-button-biodiversity/assets/style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
@@ -27,7 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
-    <script src="/plots.js"></script>
+    <script src="/belly-button-biodiversity/plots.js"></script>
 </body>
 
 </html>
