--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="utg-8">
     <title>Belly Button Biodiversity</title>
-    <link rel="stylesheet" href="/belly-button-biodiversity/assets/reset.css">
+    <link rel="stylesheet" href="/assets/reset.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
             crossorigin="anonymous">
-    <link rel="stylesheet" href="/belly-button-biodiversity/assets/style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
@@ -19,15 +19,95 @@
 <body>
     <div class="container">
 
-        <!-- initialize the data selector -->
-        <select id="data_selector"></select>
-        <div id="bar"></div>
+        <!-- header section -->
+        <div class="row">
+            <div class="col-md-12">
+                <div class="border rounded bg-light m-3 p-3">
+                    <h1 class="display-4 text-center">Belly Button Biodiversity Dashboard</h1>
+                    <p class="text-center">Use the interactive charts below to explore the dataset</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- first row -->
+        <div class="row">
+
+            <!-- id selector / demographic data viewer -->
+            <div class="col-md-3">
+                <div>
+
+                    <!-- id selector -->
+                    <div class="border rounded bg-light m-3 p-2">
+                        <p class="h6 text-center">Test Subject ID</p>
+                        <select class="form-select" id="data_selector"></select>
+                    </div>
+
+                    <!-- demographic data viewier -->
+                    <div class="border rounded bg-light m-3 p-2">
+                        <table class="table table-hover">
+                            <thead>
+                                <th scope="col" colspan="2"><strong>Demographic Info</strong></th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">ID</th>
+                                    <td id="demographic_id"></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Ethnicity</th>
+                                    <td id="demographic_ethnicity"></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Gender</th>
+                                    <td id="demographic_gender"></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Age</th>
+                                    <td id="demographic_age"></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Location</th>
+                                    <td id="demographic_location"></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Navel Type</th>
+                                    <td id="demographic_bbtype"></td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">Wash Freq.</th>
+                                    <td id="demographic_wfreq"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <!-- bar plot -->
+            <div class="col-md-4">
+                <div id="bar"></div>
+            </div>
+
+            <!-- gauge plot -->
+            <div class="col-md-5">
+                <div id="gauge"></div>
+            </div>
+        </div>
+
+        <!-- second row -->
+        <div class="row">
+
+            <!-- bubble plot -->
+            <div class="col-md-12">
+                <div id="bubble"></div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
-    <script src="/belly-button-biodiversity/plots.js"></script>
+    <script src="/plots.js"></script>
 </body>
 
 </html>
