Fixed charset typo from utg to utf

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="utg-8">
+    <meta charset="utf-8">
     <title>Belly Button Biodiversity</title>
     <link rel="stylesheet" href="/belly-button-biodiversity/assets/reset.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
